bugfix/WY-408 update logo gallery margin- and grid-spacing, and add max-width to images

--- a/src/logogallery-container/style.scss
+++ b/src/logogallery-container/style.scss
@@ -28,7 +28,6 @@
 
 		h2 {
 			padding-top: 24px;
-			padding-left: 24px;
 		}
 		padding-bottom: var(--spacing-l);
 	}
@@ -38,6 +37,7 @@
 	}
 
 	.grid {
+		grid-gap: 16px;
 
 		&_margin {
 			margin-top: var(--spacing-3-xl);
@@ -50,13 +50,16 @@
 
 			img {
 				max-height: 150px;
-				width: auto;
+				max-width: 200px;
+				width: 100%;
+				object-fit: contain;
 			}
 
 			.grid__column {
 				display: flex;
 				justify-content: center;
 				align-items: center;
+				width: calc(50% - 16px * (2 - 1)/ 2);
 			}
 		}
 	}
@@ -66,9 +69,42 @@
 		.hds-container {
 
 			h2 {
-				padding-left: 24px;
-				margin-left: 24px;
 			}
 		}
+
+	}
+
+	@media only screen and (min-width: 768px) {
+
+		.grid {
+			grid-gap: 48px;
+
+			&.sponsors-wrapper {
+
+				.grid__column {
+					width: calc(33.3333333333% - 48px * (3 - 1)/ 3);
+				}
+
+			}
+
+		}
+
+	}
+
+	@media only screen and (min-width: 992px) {
+
+		.grid {
+			grid-gap: 48px;
+
+			&.sponsors-wrapper {
+
+				.grid__column {
+					width: calc(20% - 48px * (5 - 1)/ 5);
+				}
+
+			}
+
+		}
+
 	}
 }
